--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
     <invoker.parallelThreads>1C</invoker.parallelThreads>
     <project.build.outputTimestamp>2025-10-05T19:10:54Z</project.build.outputTimestamp>
     <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
+
+    <mojo.java.target>8</mojo.java.target>
   </properties>
 
   <dependencies>
@@ -287,24 +289,13 @@
         <configuration>
           <proc>none</proc>
         </configuration>
-        <executions>
-          <execution>
-            <id>default-testCompile</id>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <phase>test-compile</phase>
-            <configuration>
-              <parameters>true</parameters>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
             <artifactId>java18</artifactId>
@@ -374,6 +365,80 @@
   </build>
 
   <profiles>
+    <profile>
+      <!-- Multi-Release JAR: Compile Java 9+ specific code when JDK 9+ is available -->
+      <id>java9-mrjar</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <!-- Compile Java 9+ specific code -->
+              <execution>
+                <id>java9-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <phase>compile</phase>
+                <configuration>
+                  <release>9</release>
+                  <compileSourceRoots>
+                    <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                  </compileSourceRoots>
+                  <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                </configuration>
+              </execution>
+              <!-- Test compilation with parameters enabled -->
+              <execution>
+                <id>default-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <phase>test-compile</phase>
+                <configuration>
+                  <source>9</source>
+                  <target>9</target>
+                  <parameters>true</parameters>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!-- JDK 8: Use simplified test compilation -->
+      <id>java8-tests</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <phase>test-compile</phase>
+                <configuration>
+                  <source>8</source>
+                  <target>8</target>
+                  <parameters>true</parameters>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <!-- workaround for concurrent access to local repository on Windows -->
       <!-- https://issues.apache.org/jira/browse/MRESOLVER-372 -->
